# data_extractor

./: README.md  app.py  pyproject.toml
extrator_de_dados/: __init__.py  main.py
extrator_de_dados/app_pages/: code_editor_btns.json  connections.py  destinations.py  sources.py
extrator_de_dados/app_pages/connectors/: config_connectors.py  csv.py  mysql.py  postgres.py
extrator_de_dados/processor/: extrator_processor.py
extrator_de_dados/processor/db_engines/: abstract_engine.py  config_engines.py  csv.py  mysql.py  postgres.py
extrator_de_dados/utils/: database.py  validators.py
