[tool.poetry]
name = "meu-extrator-de-dados"
version = "0.1.0"
description = ""
authors = ["ViniPmartins <vinicius.pereira.mts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-code-editor = "^0.1.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
